# AdvancedComputerArchitecture

./: Cargo.toml  Makefile  README.md
assembler/: Cargo.toml
assembler/src/: config.rs  main.rs
definitions/: Cargo.toml
definitions/src/: lib.rs  op_code.rs
old_assembler/src/: config.rs  io.rs  main.rs
programs/hello_world/: Makefile  main.c
resources/: example_snippets.rs  layout.rs
resources/programs/: Makefile  lib.c  lib.h  lib.h.gch
resources/programs/add_10/: Makefile  a.out  main.c
resources/programs/bubble_sort/: a.out  main.c
resources/programs/fib_non_recursive/: Makefile  a.out  main.c
resources/programs/fib_recursive/: Makefile  a.out  main.c
resources/programs/hello_test/: Makefile  a.out  main.c
resources/programs/hello_world/: Makefile  a.out  main.c
resources/programs/quick_sort/: a.out  main.c
resources/programs/vec_add/: Makefile  a.out  main.c
simulator/: Cargo.toml
simulator/src/: main.rs
src/: main.rs  memory.rs
src/display/: input.rs  mod.rs
src/instruction/: mod.rs  op_code.rs  operand.rs
src/io/: input.rs  mod.rs  output.rs
src/io/output/: mod.rs  state.rs
src/isa/: mod.rs  op_code.rs  operand.rs
src/simulator/: branch.rs  commit.rs  decode.rs  dispatch.rs  execute.rs  fetch.rs  instruction.rs  issue.rs  memory.rs  mod.rs  register.rs  reorder.rs  reservation.rs  state.rs  writeback.rs
src/simulator/execute/: alu.rs  blu.rs  mcu.rs  mod.rs
src/util/: config.rs  exit.rs  loader.rs  mod.rs  panic.rs
