[package]
name        = "daybreak"
version     = "0.1.0"
authors     = ["Anthony Wharton <a.wharton.2015@bristol.ac.uk>"]
publish     = false
description = "Project Daybreak is a superscalar, out of order, `riscv32im` simulator. It was primarily developed for a piece of coursework whilst studying Advanced Computer Architecture in the Department of Computer Science at the University of Bristol."
keywords    = ["riscv", "risc", "simulator", "cpu", "isa"]
categories  = ["command-line-utilities", "simulation", "science", "visualization"]
readme      = "README.md"

[dependencies]
backtrace = "0.3.9"
byteorder = "1.2.6"
either    = "1.5.0"
elf       = "0.0.10"
tui       = "0.3.0-beta.3"
termion   = "1.5"
